initial working copy

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,99 +1,82 @@
 :host {
   display: flex;
+  position: relative;
+  overflow: hidden;
+}
+
+[mainpanel].trashing {
+  background: var(--toolbarBack);
 }
 
 [mainpanel] {
   display: flex;
   flex-flow: column;
-  flex: 1;
-}
-
-[toolbar] {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  height: 3em;
   width: 100vw;
-  background-color: var(--mainToolbarBack);
-  color: var(--mainToolbarFore);
-
-  [controls] {
-    img {
-      width: 1.7em;
-    }
-  }
-
-  .title {
-    display: flex;
-    flex-flow: row;
-    flex: 1;
-    font-size: 200%;
-    font-weight: 600;
-    color: var(--titleFore);
-    cursor: pointer;
-    padding-left: 25%;
-
-    .titlehidden {
-      color: var(--mainToolbarBack);
-    }
-  }
-
-  .title:hover {
-    color: var(--titleFore);
-    text-shadow: 0 0 0.05em var(--titleGlow), 0 0 0.2em var(--titleGlow), 0 0 0.4em var(--titleGlow)
-  }
-}
-
-[sidebar] {
-  width: 25%;
-}
-
-[contentpanel] {
-  display: flex;
-  flex: 1;
-  flex-flow: row;
+  height: 100vh;
+  background-color: var(--mainBack);
+  color: var(--mainFore);
   overflow: hidden;
 
-  [frame] {
-    height: 2px;
-    background-color: black;
-  }
-
-  [sidebar] {
-    background-image: linear-gradient(var(--mainToolbarBack) 0%, var(--mainSidebarBottom) 75%);
+  [toolbar] {
     display: flex;
-    flex-flow: column;
-    background-color: var(--mainToolbarBack);
-    color: var(--primaryFore);
+    flex-flow: row;
+    justify-content: space-between;
+    background-color: var(--toolbarBack);
+    color: var(--toolbarFore);
+    z-index: 2;
+    position: relative;
 
-    [controls] {
+    div {
       display: flex;
       flex-flow: row;
       align-items: center;
       justify-content: center;
+      flex-wrap: wrap;
+      max-width: 50%;
+    }
+
+    div:nth-child(2) {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 100%;
+    }
+
+    mat-icon {
+      color: var(--toolbarFore);
+    }
+
+    mat-icon#link-delete {
+      color: var(--trashcan);
     }
   }
 
-  [contentback] {
-    background-color: var(--contentPanelFrame);
-    padding: 2px 0 0 2px;
-
-    display: flex;
-    flex: 1;
-
-    [content] {
-      display: flex;
-      flex-flow: column;
-      flex: 1;
-      background-color: var(--mainContentBack);
-      color: var(--mainContentFore);
-      overflow-y: auto;
-    }
+  [content].grid {
+    overflow-y: auto;
   }
 }
 
-#mark {
-  position: absolute;
-  z-index: 1000;
-  border-radius: 0.5em;
+::ng-deep [linkcard] {
+  background: var(--linkBack) !important;
+  color: var(--linkFore) !important;
+}
+
+.appicon {
+  width: 32px;
+}
+
+::ng-deep .mat-menu-panel {
+  background-color: var(--menuBack);
+  color: var(--menuFore);
+}
+
+.btnLanguage:not(:hover) {
+  .crowdin {
+    display: none;
+  }
+}
+
+.crowdin {
+  margin-top: 12px;
+  position: fixed;
 }
