--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -33,9 +33,8 @@
     </div>
     <div contentback>
       <div content>
-        <app-impressum *ngIf="globals.currentPage==='impressum'"></app-impressum>
-        <app-welcome *ngIf="globals.currentPage==='welcome'"></app-welcome>
-        <app-whats-new *ngIf="globals.currentPage==='news'"></app-whats-new>
+        <app-animals *ngIf="false" [event]="globals?.zodiacEvent"></app-animals>
+        <app-elements *ngIf="true" [event]="globals?.zodiacEvent"></app-elements>
       </div>
     </div>
   </div>
