--- a/src/styles.scss
+++ b/src/styles.scss
@@ -387,7 +387,7 @@ div[property-panel] {
   }
 }
 
-@keyframes furz {
+@keyframes fadeColor {
   0% {
     color: var(--ff);
     background-color: var(--bf);
