+ fixed display of summer and main page

--- a/src/app/components/five-elements/five-elements.component.scss
+++ b/src/app/components/five-elements/five-elements.component.scss
@@ -101,7 +101,7 @@
           [props] {
             display: flex;
             flex-flow: row wrap;
-            align-items: end;
+            align-items: flex-end;
             justify-content: space-between;
             padding: 1em;
             gap: 1em;
